# DOCIProject

./: CMakeLists.txt
DOCI_Head/: CMakeLists.txt
DOCI_Head/abstract/: StaticWrapper.h
DOCI_Head/include/: DOCI.h  RHFWrapper.h
DOCI_Head/src/: AddressingMatrix.cpp  DOCI.cpp  Extras.cpp  RHFWrapper.cpp
DOCI_Head/testAdditions/: ConvolutedWrapper.cpp  ConvolutedWrapper.h  FictionalCalculator.cpp  FictionalCalculator.h
unit_tests/: Makefile  cmake_install.cmake  unit_tests.cbp
unit_tests/basic_tests/: CMakeLists.txt  Doci_real_test.cpp  Doci_test.cpp  Makefile  basic_tests  cmake_install.cmake  lol.cpp  playtest.cpp
