cmake_minimum_required(VERSION 3.8)
project(DOCI_Head)

set(CMAKE_CXX_STANDARD 11)

file(GLOB SOURCES "src/*.cpp" "include/*.h" "abstract/*.h" "testAdditions/*.h" "testAdditions/*.cpp")
add_library(DOCI_Head ${SOURCES})
find_package(eigen3)
if (EIGEN3_FOUND)
    include_directories(${EIGEN3_INCLUDE_DIRS})
    target_link_libraries (DOCI_Head ${EIGEN3_LIBRARIES})
endif ()

find_package(Boost)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIR})
    target_link_libraries (DOCI_Head ${Boost_LIBRARIES})
endif()

find_package(Armadillo)
if (Armadillo_FOUND)
    include_directories(${Armadillo_INCLUDE_DIR})
    target_link_libraries (DOCI_Head ${Armadillo_LIBRARIES})
endif()

find_package(hf 2.0.0 REQUIRED)
if (hf_FOUND)
    include_directories(${hf_INCLUDE_DIRS})
    target_link_libraries(DOCI_Head ${hf_LIBRARIES})
endif()

find_package(libwrp 2.1.1 REQUIRED)
if (libwrp_FOUND)
    include_directories(${libwrp_INCLUDE_DIRS})
    target_link_libraries(DOCI_Head ${libwrp_LIBRARIES})
endif()